--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start",
+    "start":"~/Library/Android/sdk/platform-tools/adb -s e36f8400 reverse tcp:8081 tcp:8081 && react-native start",
     "test": "jest"
   },
   "dependencies": {
